force-app/main/default/objects/SUTA__c/SUTA__c.object-meta.xml
<CustomObject>
    <label>SUTA</label>
    <nameField>
        <label>SUTA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUTA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>