force-app/main/default/objects/SUTA__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trion 1</fullName>
            </value>
            <value>
                <fullName>Trion 2</fullName>
            </value>
            <value>
                <fullName>Trion 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>