force-app/main/default/objects/SUTA__c/fields/ER_Rate__c.field-meta.xml
<CustomField>
    <fullName>ER_Rate__c</fullName>
    <label>ER Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>