force-app/main/default/objects/SUTA__c/fields/Reporting_Level__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Level__c</fullName>
    <label>Reporting Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>