force-app/main/default/objects/SUTA__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>SUTA</relationshipLabel>
    <relationshipName>SUTA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>