force-app/main/default/objects/SUTA__c/fields/State_Assessment_and_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>State_Assessment_and_Surcharges__c</fullName>
    <label>State Assessment and Surcharges</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>