force-app/main/default/objects/SUTA__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <formula>State__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Name</label>
    <type>Text</type>
</CustomField>