force-app/main/default/objects/SUTA__c/fields/Wage_Base__c.field-meta.xml
<CustomField>
    <fullName>Wage_Base__c</fullName>
    <label>Wage Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>