force-app/main/default/objects/SUTA__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>SUTA</relationshipLabel>
    <relationshipName>SUTA</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>