force-app/main/default/objects/SUTA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Rate__c</columns>
    <columns>Reporting_Level__c</columns>
    <columns>State__c</columns>
    <columns>Wage_Base__c</columns>
    <columns>Year__c</columns>
    <columns>State_Assessment_and_Surcharges__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Tennessee</value>
    </filters>
    <label>All</label>
</ListView>