force-app/main/default/objects/SUTA__c/listViews/SUTA.listView-meta.xml
<ListView>
    <fullName>SUTA</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>State_Name__c</columns>
    <columns>Reporting_Level__c</columns>
    <columns>Entity__c</columns>
    <columns>Status__c</columns>
    <columns>Rate__c</columns>
    <columns>Wage_Base__c</columns>
    <columns>State_Assessment_and_Surcharges__c</columns>
    <columns>ER_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>2020 SUTA</label>
</ListView>