force-app/main/default/objects/SUTA__c/listViews/X2021_SUTA.listView-meta.xml
<ListView>
    <fullName>X2021_SUTA</fullName>
    <columns>NAME</columns>
    <columns>Effective_Date__c</columns>
    <columns>Reporting_Level__c</columns>
    <columns>Wage_Base__c</columns>
    <columns>State__c</columns>
    <columns>Entity__c</columns>
    <columns>ER_Rate__c</columns>
    <columns>Rate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>2021 SUTA</label>
</ListView>