force-app/main/default/objects/SUTA__c/listViews/X2022_SUTA.listView-meta.xml
<ListView>
    <fullName>X2022_SUTA</fullName>
    <columns>NAME</columns>
    <columns>State_Assessment_and_Surcharges__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Reporting_Level__c</columns>
    <columns>Wage_Base__c</columns>
    <columns>State__c</columns>
    <columns>Entity__c</columns>
    <columns>ER_Rate__c</columns>
    <columns>Rate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <label>2022 SUTA</label>
</ListView>